@@ -135,7 +135,8 @@ make-depends: piplib-gmp
 [isl]
 category: math
 module: isl
-location: git://repo.or.cz/isl.git@24e309472a53920bdf19130a12c9ccec320c1867
+#location: git://repo.or.cz/isl.git@24e309472a53920bdf19130a12c9ccec320c1867
+location: http://repo.or.cz/r/isl.git@24e309472a53920bdf19130a12c9ccec320c1867
 retrieve-method: git
 bootstrap: ./autogen.sh
 configure: --with-gmp-prefix=$poccsrcdir/math/external/install --with-gmp-exec-prefix=$poccsrcdir/math/external/install
@@ -144,11 +145,13 @@ configure: --with-gmp-prefix=$poccsrcdir/math/external/install --with-gmp-exec-p
 [barvinok]
 category: math
 module: barvinok
-location: http://www.kotnet.org/~skimo/barvinok/barvinok-0.35.tar.gz
-retrieve-method: wget
-configure: --with-libgmp=$poccsrcdir/math/external/install --with-ntl=$poccsrcdir/math/external/install --enable-shared-barvinok
+#location: http://www.kotnet.org/~skimo/barvinok/barvinok-0.35.tar.gz
+#location: http://www.kotnet.org/~skimo/barvinok/barvinok-0.34.tar.gz
+location: math/barvinok-0.34.tar.gz
+retrieve-method: local
+configure: --with-libgmp=$poccsrcdir/math/external/install --with-ntl=$poccsrcdir/math/external/install --enable-shared-barvinok 
 make-depends: isl ntl
-
+#--with-isl=system --with-isl-prefix=$poccsrcdir/math/install-isl
 
 [ntl]
 category: math
@@ -157,6 +160,16 @@ location: http://shoup.net/ntl/ntl-5.5.2.tar.gz
 retrieve-method: wget
 bootstrap: cd src;    ./configure DEF_PREFIX=$poccsrcdir/math/external/install NTL_GMP_LIP=on SHARED=on && LD_LIBRARY_PATH=$poccsrcdir/math/external/install/lib:$LD_LBRARY_PATH make && make install; cd -
 configure: disabled
+
+
+[lp_solve]
+category: math
+module: lp_solve
+location: math/external/lp_solve_5.5.tar.gz
+retrieve-method: local
+bootstrap: cd lpsolve55 && sh ccc && cd -
+configure: disabled
+
 
 ## Generators
 [cloog-svn]
@@ -171,7 +184,9 @@ make-depends: scoplib
 [cloog]
 category: generators
 module: cloog
-location: git://repo.or.cz/cloog.git@fc61301575290ca6f25027a57341f8217f3a7611
+location: http://repo.or.cz/r/cloog.git@fc61301575290ca6f25027a57341f8217f3a7611
+#location: git://repo.or.cz/cloog.git@fc61301575290ca6f25027a57341f8217f3a7611
+#location: http://repo.or.cz/r/cloog.git
 retrieve-method: git
 bootstrap: ./autogen.sh
 configure: --with-isl=system --with-isl-prefix=$poccsrcdir/math/install-isl --with-gmp-prefix=$poccsrcdir/math/external/install --without-piplib
@@ -285,5 +300,5 @@ module: lotha
 location: svn+ssh://blue.cdsc.ucla.edu/home/svn/cdsc/polyhed-proj/Software/modules/lotha
 retrieve-method: svn
 bootstrap: ./bootstrap.sh
-configure: --with-scoplib=$poccsrcdir/ir/install-scoplib --with-past=$poccsrcdir/ir/install-past --with-rose=${ROSE_ROOT} --with-boost=${BOOST_ROOT} --with-barvinok=$poccsrcdir/math/install-barvinok --with-hlsir=$poccsrcdir/ir/install-hlsir --with-gmp-prefix=$poccsrcdir/math/external/install --with-polylib-gmp=$poccsrcdir/math/install-polylib
-make-depends: scoplib past barvinok hlsir
+configure: --with-scoplib=$poccsrcdir/ir/install-scoplib --with-past=$poccsrcdir/ir/install-past --with-rose=${ROSE_ROOT} --with-boost=${BOOST_ROOT} --with-barvinok=$poccsrcdir/math/install-barvinok --with-hlsir=$poccsrcdir/ir/install-hlsir --with-gmp-prefix=$poccsrcdir/math/external/install --with-polylib-gmp=$poccsrcdir/math/install-polylib --with-isl=$poccsrcdir/math/install-isl --with-lpsolve=$poccsrcdir/math/lp_solve --with-candl=$poccsrcdir/analyzers/install-candl --with-piplib=$poccsrcdir/math/install-piplib-hybrid --with-cloog=$poccsrcdir/generators/install-cloog
+make-depends: scoplib past barvinok hlsir isl lp_solve piplib-hybrid cloog
